         for reading and writing (Stuart).
20150303 peripherals/nic/w5100_internals.h,ui/ui.h: add missing GCC_PRINTF
         annotations (Stuart).
20150303 peripherals/nic/w5100_socket.c: fix segfault in error handling when
         setting SO_REUSEADDR (Stuart).
20150314 compat/{unix/socket.c,win32/socket.c},debugger/{breakpoint.c,
         expression.c},machine.c,peripherals/{if1.c,if2.c,disk/{beta.c,opus.c,
         plusd.c,upd_fdc.c,wd_fdc.c},flash/am29f010.c,ide/{divide.c,zxatasp.c,
         zxcf.c},nic/{enc28j60.c,w5100.c},scld.c,spectranet.c},
         pokefinder/pokemem.c,sound/sdlsound.c,ui/uijoystick.c: switch to using
         libspectrum_new over raw malloc (Sergio).
20150315 compat/{unix/socket.c,win32/socket.c},debugger/{breakpoint.c,
         expression.c},machine.c,peripherals/{disk/{beta.c,disk.c,opus.c,
         plusd.c,upd_fdc.c,wd_fdc.c},flash/am29f010.c,ide/{divide.c,zxatasp.c,
         zxcf.c},if1.c,if2.c,nic/{enc28j60.c,w5100.c},scld.c,spectranet.c},
         slt.c: remove unneeded "out of memory" error handling (Sergio).
20150315 peripherals/disk/disk.c: use libspectrum_new0 where appropriate
         (Sergio).
20150315 peripherals/nic/w5100_socket.c: initialise sockaddr_in (Sergio).
20150316 compat/win32/socket.c: fix misuse of ARRAY_SIZE (Sergio).
20150316 configure.ac: check for libspectrum before checking for UIs (Stuart).
20150316 configure.ac: check for libspectrum's own GLib replacement (Stuart).
20150316 configure.ac: use real GLib iff libspectrum does and make GTK+ UI
         depend on real GLib (Stuart).
20150316 configure.ac: add missing quotes to AC_MSG_ERROR for GLib (Stuart).
20150316 configure.ac: remove duplicate 'checking for GLib' message (Stuart).
20150316 configure.ac: remove duplicate HAVE_LIB_GLIB definition (Stuart).
20150316 configure.ac: always use -Wwrite-strings when using GCC (Stuart).
20150316 movie.c,screenshot.c: define ZLIB_CONST when including <zlib.h>
         (Stuart).